# ICM-20948-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.zed/: settings.json
examples/rp2350-async/: Cargo.toml  README.md
examples/rp2350-async/src/: ahrs_euler_async.rs  basic_reading_async.rs  calibration_async.rs  fifo_batch_async.rs  fifo_data_validation_async.rs  low_power_mode_async.rs  magnetometer_async.rs  magnetometer_calibration_async.rs  nine_axis_reading_async.rs  sample_rate_test_async.rs  self_test_async.rs  sensor_configuration_async.rs
examples/rp2350-blocking/: Cargo.toml  README.md
examples/rp2350-blocking/src/: ahrs_euler.rs  basic_reading.rs  calibration.rs  fifo_batch.rs  fifo_data_validation.rs  low_power_mode.rs  magnetometer.rs  magnetometer_calibration.rs  nine_axis_reading.rs  sample_rate_test.rs  self_test.rs  sensor_configuration.rs
src/: device.rs  interface.rs  interrupt.rs  lib.rs  power.rs  registers.rs
src/dmp/: config.rs  firmware.rs  firmware_data.rs  loader.rs  mod.rs  parser.rs
src/fifo/: mod.rs  parser.rs
src/sensors/: accelerometer.rs  gyroscope.rs  magnetometer.rs  mod.rs
tests/: async_tests.rs  fifo_efficiency_test.rs  lib.rs
tests/common/: mock_interface.rs  mod.rs  test_utils.rs
tests/integration/: basic_workflow.rs
tests/unit/: bank_switching.rs  calibration.rs  config_validation.rs  data_integrity.rs  error_handling.rs  gyro_calibration.rs  magnetometer.rs  self_test.rs  temperature.rs
