[package]
name = "icm20948-rp2350-blocking-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.dev]
lto = true
codegen-units = 1
debug = 2
debug-assertions = true
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 's'

[dependencies]
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
] }
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.1.0"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = { version = "2.1.1", features = [] }
icm20948 = { package = "icm20948-rs", path = "../..", features = ["defmt"] }
embedded-hal-bus = { version = "0.2.0" }
embedded-hal = "1.0"
libm = "0.2"
heapless = "0.8"
ahrs = { version = "0.8", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
micromath = "2.1"

[[bin]]
name = "basic_reading"
path = "src/basic_reading.rs"

[[bin]]
name = "sensor_configuration"
path = "src/sensor_configuration.rs"

[[bin]]
name = "magnetometer"
path = "src/magnetometer.rs"

[[bin]]
name = "nine_axis_reading"
path = "src/nine_axis_reading.rs"

[[bin]]
name = "fifo_batch"
path = "src/fifo_batch.rs"

[[bin]]
name = "calibration"
path = "src/calibration.rs"

[[bin]]
name = "magnetometer_calibration"
path = "src/magnetometer_calibration.rs"

[[bin]]
name = "self_test"
path = "src/self_test.rs"

[[bin]]
name = "sample_rate_test"
path = "src/sample_rate_test.rs"

[[bin]]
name = "ahrs_euler"
path = "src/ahrs_euler.rs"

[[bin]]
name = "fifo_data_validation"
path = "src/fifo_data_validation.rs"

[[bin]]
name = "low_power_mode"
path = "src/low_power_mode.rs"
